# cpp-devcontainer

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  install-clang.sh  install-cmake.sh  install-cppcheck.sh  install-vcpkg.sh
.github/workflows/:  publish-devcontainer.yaml  lint-dockerfile.yaml  publish-devcontainer.yaml  sanity-checks.yaml
test/: CMakeLists.txt  CMakePresets.json  main.cpp
